--- a/assets/variables.scss
+++ b/assets/variables.scss
@@ -3,3 +3,9 @@
 // The variables you want to modify
 // $font-size-root: 20px;
 $color-pack: false;
+
+/*@import '~vuetify/src/styles/styles.sass';
+
+@each $name, $value in $utilities {
+  $utilities: map-merge($utilities, ($name: false))
+}*/
