undo vuetify style removal

--- a/assets/variables.scss
+++ b/assets/variables.scss
@@ -4,8 +4,8 @@
 // $font-size-root: 20px;
 $color-pack: false;
 
-@import '~vuetify/src/styles/styles.sass';
+/*@import '~vuetify/src/styles/styles.sass';
 
 @each $name, $value in $utilities {
   $utilities: map-merge($utilities, ($name: false))
-}
+}*/
